--- a/index.html
+++ b/index.html
@@ -259,6 +259,43 @@
                             <span class="">&#9733; &#9733; &#9734; &#9734; &#9734;</span>
                         </span>
                     </li>
+                    <h6>Data Structures and Algorithms</h6>
+                    <li>
+                        <span class="skills-title">Arrays</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Strings</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">LinkedList</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">HashMap</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Trees</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9734; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Search</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9734; &#9734;</span>
+                        </span>
+                    </li>
                     <h6>Automation Tools</h6>
                     <li>
                         <span class="skills-title">Selenium Webdriver</span>
@@ -417,6 +454,19 @@
                         <span class="skills-title">CircleCI</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <h6>Performance Testing Tools</h6>
+                    <li>
+                        <span class="skills-title">JMeter</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">K6</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
                     </li>
                     <h6>Databases</h6>
@@ -659,33 +709,7 @@
                 <div class="project row">
                     <div class="col-md-4">
                         <h4>LMV - Motor Insurance</h4>
-                        <p>Apr 2016 to Jul 2018</p>
-                        <p>Full Time</p>
-                    </div>
-                    <div class="col-md-8">
-                        <p>
-                            <strong>Test Engineer</strong>
-                            <span class="project-summary">
-
-                            </span>
-                            <span class="project-details">
-                                <span class="location">
-                                    <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
-                                    <span class="separator">|</span>
-                                    <span class="link">
-                                        <span></span>
-                                        <a href="http://handssys.com/" target="_blank"><i
-                                                class="fa-solid fa-link fw"></i>http://handssys.com/</a>
-                                    </span>
-                                </span>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-                <div class="project row">
-                    <div class="col-md-4">
-                        <h4>CMS - Clinical Management System</h4>
-                        <p>Jul 2015 to Apr 2016</p>
+                        <p>Jul 2015 to Jul 2018</p>
                         <p>Full Time</p>
                     </div>
                     <div class="col-md-8">
