Updated content for experience

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="top-container">
         <h1>Bhargava Kumar</h1>
         <p>Senior Software Development Engineer in Test</p>
+        <p style="word-wrap: break-word; padding-left: 500px; padding-right: 500px;" >I am a full stack Software automation engineer with 7+ years of experience have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
         <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
     </div>
     <div id="experiences" class="container">
@@ -50,11 +51,11 @@
                         <p>
                             <strong>Sr. Software Development Engineer in Test</strong>
                             <span class="experience-summary">
-                                Currently, I am working as a Sr.SDET in UNIFY tech. My current Project is StockX
-                                ECommerce. As a QE, I am responsible for both frontend and backend manual and automation
-                                testing. He we are using tools and technologies are JavaScript, Typescript, NodeJS,
-                                WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, Saucelabs, Axios, Python,
-                                CircleCI etc.
+                                Currently, I am working as a Sr.SDET in UNIFY technologies, and the current Project is StockX
+                                ECommerce. Here I am working on both manual and automation testing for frontend and backend 
+                                of the application. Involve in load testing. These are the tools and technologies currently using for 
+                                testing are JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, 
+                                Saucelabs, Axios, Python, K6, CircleCI etc.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
@@ -104,7 +105,7 @@
                 <div class="experience row">
                     <div class="col-md-4">
                         <h4>Handssys Software Tecnologies Pvt. Ltd.</h4>
-                        <p>May 2015 to July 31</p>
+                        <p>May 2015 to July 2018</p>
                         <p>Full Time</p>
                     </div>
                     <div class="col-md-8">
@@ -146,7 +147,7 @@
                         <p>
                             <strong>Bachelor of Technology - Aeronautical Engineering</strong>
                             <span class="academic-summary">
-                                <p>Marks(%) - 70</p>
+                                <p>Marks(%) - 70.84</p>
                                 <p>Full Time</p>
                             </span>
                             <span class="academic-details">
