--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="top-container">
         <h1>Bhargava Kumar</h1>
         <p>Senior Software Development Engineer in Test</p>
-        <p style="word-wrap: break-word; padding-left: 500px; padding-right: 500px;" >I am a full stack Software automation engineer with 7+ years of experience have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
+        <p style="word-wrap: break-word; padding-left: 500px; padding-right: 500px;" >I am a full stack Software Test Automation engineer with 7+ years of experience and have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
         <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
     </div>
     <div id="experiences" class="container">
@@ -44,6 +44,7 @@
                 <div class="experience row">
                     <div class="col-md-4">
                         <h4>Unify Technologies Pvt Ltd.</h4>
+                        <p><b>Product: </b>StockX</p>
                         <p>May 2020 to Till Date</p>
                         <p>Full Time</p>
                     </div>
@@ -55,7 +56,7 @@
                                 ECommerce. Here I am working on both manual and automation testing for frontend and backend 
                                 of the application. Involve in load testing. These are the tools and technologies currently using for 
                                 testing are JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, 
-                                Saucelabs, Axios, Python, K6, CircleCI etc.
+                                SauceLabs, Axios, Python, JMeter, K6, CircleCI etc.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
@@ -83,7 +84,7 @@
                             <span class="experience-summary">
                                 Worked as a Senior Test Automation Engineer in ZenQ, Here I worked for several projects
                                 including
-                                retail and Ecommerce applications. Designed 2 Automation frameworks for both FE & BE
+                                retail and E-commerce applications. Designed 2 Automation frameworks for both FE & BE
                                 from
                                 scratch on nodejs platform.
                             </span>
@@ -104,7 +105,7 @@
 
                 <div class="experience row">
                     <div class="col-md-4">
-                        <h4>Handssys Software Tecnologies Pvt. Ltd.</h4>
+                        <h4>Handssys Software Technologies Pvt. Ltd.</h4>
                         <p>May 2015 to July 2018</p>
                         <p>Full Time</p>
                     </div>
@@ -490,7 +491,7 @@
                         </span>
                     </li>
                     <li>
-                        <span class="skills-title">Redis</span>
+                        <span class="skills-title">DynamoDB</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
