--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="top-container">
         <h1>Bhargava Kumar</h1>
-        <p>Senior Software Development Engineer in Test</p>
+        <h4><b>Senior Software Development Engineer in Test</b></h4>
         <p style="word-wrap: break-word; padding-left: 500px; padding-right: 500px;" >I am a full stack Software Test Automation engineer with 7+ years of experience and have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
         <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
     </div>
@@ -493,7 +493,13 @@
                     <li>
                         <span class="skills-title">DynamoDB</span>
                         <span class="skills-score">
-                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                            <span class="">&#9733; &#9733; &#9733; &#9734; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">PostgreSQL</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
                     </li>
                     <h6>Code Management Tools</h6>
@@ -575,7 +581,13 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Self-learned</h6>
+                    <li>
+                        <span class="skills-title">Kali Linux</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <h6>Knowledge on other tools</h6>
                     <li>
                         <span class="skills-title">ExpressJS</span>
                         <span class="skills-score">
@@ -629,7 +641,7 @@
                 <hr>
                 <div class="project row">
                     <div class="col-md-4">
-                        <h4>StockX E-Commerce</h4>
+                        <h4>StockX</h4>
                         <p>May 2020 to Till date</p>
                         <p>Full Time</p>
                     </div>
