Updated automation tools

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="experience row">
                     <div class="col-md-4">
                         <h4>Unify Technologies Pvt Ltd.</h4>
-                        <p><b>Product: </b>StockX</p>
+                        <p><b>Project: </b>StockX</p>
                         <p>May 2020 to Till Date</p>
                         <p>Full Time</p>
                     </div>
@@ -52,11 +52,11 @@
                         <p>
                             <strong>Sr. Software Development Engineer in Test</strong>
                             <span class="experience-summary">
-                                Currently, I am working as a Sr.SDET in UNIFY technologies, and the current Project is StockX
-                                ECommerce. Here I am working on both manual and automation testing for frontend and backend 
+                                Currently, I am working as a Sr.SDET in UNIFY technologies, and the current Project is StockX.
+                                Here I am working on both manual and automation testing for frontend and backend 
                                 of the application. Involve in load testing. These are the tools and technologies currently using for 
                                 testing are JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, 
-                                SauceLabs, Axios, Python, JMeter, K6, CircleCI etc.
+                                SauceLabs, Axios, JMeter, K6, CircleCI etc.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
@@ -167,7 +167,7 @@
                 </div>
                 <div class="academic row">
                     <div class="col-md-4">
-                        <h4>Narayana Jr. College</h4>
+                        <h4>Narayana Junior College</h4>
                         <p>Andhra Pradesh Board of Secondary Education</p>
                         <p>June 2008 to May 2010</p>
 
@@ -318,12 +318,6 @@
                         </span>
                     </li>
                     <li>
-                        <span class="skills-title">Cucumber BDD</span>
-                        <span class="skills-score">
-                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
-                        </span>
-                    </li>
-                    <li>
                         <span class="skills-title">Puppeteer</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
@@ -419,6 +413,12 @@
                         <span class="skills-title">JUnit</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">PyTest</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
                     </li>
                     <h6>Build Automation Tools</h6>
@@ -584,7 +584,7 @@
                     <li>
                         <span class="skills-title">Kali Linux</span>
                         <span class="skills-score">
-                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                            <span class="">&#9733; &#9733; &#9733; &#9734; &#9734;</span>
                         </span>
                     </li>
                     <h6>Knowledge on other tools</h6>
