Fixed the mobile web view issue

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <a class="nav-link" href="#contact">CONTACTS</a>
         </nav>
     </div>
-    <div class="top-container">
+    <div class="top-container container">
         <h1>Bhargava Kumar</h1>
         <h4><b>Senior Software Development Engineer in Test</b></h4>
-        <p style="word-wrap: break-word; padding-left: 500px; padding-right: 500px;" >I am a full stack Software Test Automation engineer with 7+ years of experience and have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
+        <p style="" >I am a full stack Software Test Automation engineer with 7+ years of experience and have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
         <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
     </div>
     <div id="experiences" class="container">
