Fixed css and text errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="top-container container">
         <h1>Bhargava Kumar</h1>
         <h4><b>Senior Software Development Engineer in Test</b></h4>
-        <p style="" >I am a full stack Software Test Automation engineer with 7+ years of experience and have built several frontend and backend automation frameworks from the scratch and have performed both functional and non functional testing.</p>
+        <p>I am a full stack software test automation engineer with 7+ years of experience and have built several frontend and backend automation frameworks from scratch and have performed both functional and non functional testing.</p>
         <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
     </div>
     <div id="experiences" class="container">
@@ -43,7 +43,7 @@
 
                 <div class="experience row">
                     <div class="col-md-4">
-                        <h4>Unify Technologies Pvt Ltd.</h4>
+                        <h4>Unify Technologies Pvt. Ltd.</h4>
                         <p><b>Project: </b>StockX</p>
                         <p>May 2020 to Till Date</p>
                         <p>Full Time</p>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="academic row">
                     <div class="col-md-4">
-                        <h4>Narayana Junior College</h4>
+                        <h4><a href="https://www.narayanagroup.com/"> Narayana Junior College</a></h4>
                         <p>Andhra Pradesh Board of Secondary Education</p>
                         <p>June 2008 to May 2010</p>
 
@@ -342,9 +342,15 @@
                         </span>
                     </li>
                     <li>
+                        <span class="skills-title">TestCafe</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
                         <span class="skills-title">Serenity</span>
                         <span class="skills-score">
-                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
                     </li>
                     <h6>Rest API Automation Tools</h6>
@@ -756,13 +762,13 @@
                 <div class="col-md-6">
                     <ul class="no-bullets">
                         <li>
-                            <a href="ch.bhargavkumar500@gmail.com" target="_blank" style="text-decoration: none;"">
+                            <a href="ch.bhargavkumar500@gmail.com" target="_blank">
                                 <span <i class=" fa fa-envelope fa-2x icon"></i> </span>
                                 ch.bhargavkumar500@gmail.com
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/Bhargavkumar03" target="_blank" style="text-decoration: none;">
+                            <a href="https://twitter.com/Bhargavkumar03" target="_blank">
                                 <span <i class="fa-brands fa-twitter fa-2x icon"></i></span>
                                 https://twitter.com/Bhargavkumar03
                             </a>
@@ -772,10 +778,9 @@
                 <div class="col-md-6">
                     <ul class="no-bullets">
                         <li>
-                            <a href="https://www.linkedin.com/in/bhargav-kumar-00a72a1a7/" target="_blank"
-                                style="text-decoration: none">
+                            <a href="https://www.linkedin.com/in/bhargav-kumar-00a72a1a7/" target="_blank">
                                 <span <i class='fa fa-linkedin-square fa-2x icon'></i> </span>
-                                https://www.linkedin.com/in/bhargav-kumar
+                                https://www.linkedin.com/in/bhargava-kumar-00a72a1a7/
                             </a>
                         </li>
                     </ul>
