Updated experience description

--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
                         <p>
                             <strong>Sr. Software Development Engineer in Test</strong>
                             <span class="experience-summary">
-                                Currently, I am working as a Sr.SDET in UNIFY technologies, and the current Project is StockX.
-                                Here I am working on both manual and automation testing for frontend and backend 
-                                of the application. Involve in load testing. These are the tools and technologies currently using for 
-                                testing are JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, 
-                                SauceLabs, Axios, JMeter, K6, CircleCI etc.
+                                Currently, I am working as a senior SDET at UNIFY Technologies, and the current project is StockX, where I am working on frontend and backend manual and automation testing of the application. participate in load testing. These are the tools and technologies currently being used for Other tools for testing include JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, SauceLabs, Axios, JMeter, K6, CircleCI, and others.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
@@ -82,11 +78,7 @@
                         <p>
                             <strong>Sr. Test Automation Engineer</strong>
                             <span class="experience-summary">
-                                Worked as a Senior Test Automation Engineer in ZenQ, Here I worked for several projects
-                                including
-                                retail and E-commerce applications. Designed 2 Automation frameworks for both FE & BE
-                                from
-                                scratch on nodejs platform.
+                                I worked as a senior test automation engineer at ZenQ. Here I worked on several projects, including retail and e-commerce applications. designed two automation frameworks for both FE and BE from scratch on the Node.js platform.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
@@ -113,7 +105,7 @@
                         <p>
                             <strong>Test Engineer</strong>
                             <span class="experience-summary">
-                                Started career in Handssys as a Test Associate, and promoted to Test Engineer.
+                                I started my career as a test associate at Handssys before being promoted to test engineer.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
