Added new company details

--- a/index.html
+++ b/index.html
@@ -43,16 +43,42 @@
 
                 <div class="experience row">
                     <div class="col-md-4">
+                        <h4>Boeing India Pvt. Ltd.</h4>
+                        <p><b>Project: </b>DAS - AMS</p>
+                        <p>Feb 2023 to Till Date</p>
+                        <p>Full Time</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Software Engineer</strong>
+                            <span class="experience-summary">
+                                Software Engineer
+                            </span>
+                            <span class="experience-details">
+                                <span class="location">
+                                    <span><i class="fa-solid fa-location-dot fw"></i>Bengaluru</span>
+                                    <span class="separator">|</span>
+                                    <span class="link">
+                                        <a href="https://www.boeing.co.in/" target="_blank"><i
+                                                class="fa-solid fa-link fw"></i>https://www.boeing.co.in/</a>
+                                    </span>
+                                </span>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="experience row">
+                    <div class="col-md-4">
                         <h4>Unify Technologies Pvt. Ltd.</h4>
                         <p><b>Project: </b>StockX</p>
-                        <p>May 2020 to Till Date</p>
+                        <p>May 2020 to Feb 2023</p>
                         <p>Full Time</p>
                     </div>
                     <div class="col-md-8">
                         <p>
                             <strong>Sr. Software Development Engineer in Test</strong>
                             <span class="experience-summary">
-                                Currently, I am working as a senior SDET at UNIFY Technologies, and the current project is StockX, where I am working on frontend and backend manual and automation testing of the application. participate in load testing. These are the tools and technologies currently being used for Other tools for testing include JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, SauceLabs, Axios, JMeter, K6, CircleCI, and others.
+                                I worked as a senior SDET at UNIFY Technologies, and the project is StockX, where I worked on frontend and backend manual and automation testing of the application. participate in load testing. These are the tools and technologies currently being used for Other tools for testing include JavaScript, Typescript, NodeJS, WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, SauceLabs, Axios, JMeter, K6, CircleCI, and others.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
@@ -248,6 +274,12 @@
                         </span>
                     </li>
                     <li>
+                        <span class="skills-title">C#</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9734; &#9734; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
                         <span class="skills-title">Motoko</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9734; &#9734; &#9734;</span>
@@ -435,6 +467,12 @@
                     <h6>Cloud Computing Tool</h6>
                     <li>
                         <span class="skills-title">Amazon Web Services (AWS)</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Azure</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
@@ -628,6 +666,12 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
                     </li>
+                    <li>
+                        <span class="skills-title">Angular</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                        </span>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -639,8 +683,34 @@
                 <hr>
                 <div class="project row">
                     <div class="col-md-4">
+                        <h4>Boeing Digital Aviation Services - Asset Management System</h4>
+                        <p>Feb 2023 to Till date</p>
+                        <p>Domain: Leasing</p>
+                        <p>Full Time</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Software Engineer</strong>
+                            <span class="project-details">
+                                <span class="location">
+                                    <span><i class="fa-solid fa-location-dot fw"></i>Bengaluru</span>
+                                    <span class="separator">|</span>
+                                    <span class="link">
+                                        <span></span>
+                                        <a href="https://services.boeing.com/maintenance-engineering/maintenance-optimization/asset-management-solution" target="_blank"><i
+                                                class="fa-solid fa-link fw"></i>https://services.boeing.com/asset-management-solution</a>
+                                    </span>
+                                </span>
+                            </span>
+                        </p>
+                        <a href="https://stockx.com/"><img src="images/projects/boeing_logo.png" alt="Boeing"></a>
+                    </div>
+                </div>
+                <div class="project row">
+                    <div class="col-md-4">
                         <h4>StockX</h4>
                         <p>May 2020 to Till date</p>
+                        <p>Domain: E-Commerce</p>
                         <p>Full Time</p>
                     </div>
                     <div class="col-md-8">
@@ -665,6 +735,7 @@
                     <div class="col-md-4">
                         <h4>AudienceView</h4>
                         <p>Nov 2018 to May 2020</p>
+                        <p>Domain: Retail</p>
                         <p>Full Time</p>
                     </div>
                     <div class="col-md-8">
@@ -714,6 +785,7 @@
                     <div class="col-md-4">
                         <h4>LMV - Motor Insurance</h4>
                         <p>Jul 2015 to Jul 2018</p>
+                        <p>Domain: Vehicle Insurance</p>
                         <p>Full Time</p>
                     </div>
                     <div class="col-md-8">
