--- a/index.html
+++ b/index.html
@@ -19,16 +19,25 @@
 </head>
 
 <body>
-  <div class="color-container">
-    <div class="nav-container">
-      <nav class="nav navbar-light sticky-top navbar-collapse">
-        <a class="nav-link active" href="#experiences">WORK EXPERIENCE</a>
-        <a class="nav-link" href="#education">EDUCATION</a>
-        <a class="nav-link" href="#technicalSkills">TECHNICAL SKILLS</a>
-        <a class="nav-link" href="#projects">PROJECTS</a>
-        <a class="nav-link" href="#contact">CONTACTS</a>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <button class="navbar-toggler collapsed d-flex d-lg-none flex-column" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="toggler-icon top-bar"></span>
+      <span class="toggler-icon middle-bar"></span>
+      <span class="toggler-icon bottom-bar"></span>
+    </button>
+    <div class="collapse navbar-collapse nav" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#experiences">WORK EXPERIENCE</a></li>
+        <li class="nav-item"><a class="nav-link" href="#education">EDUCATION</a></li>
+        <li class="nav-item"><a class="nav-link" href="#technicalSkills">TECHNICAL SKILLS</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">PROJECTS</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">CONTACTS</a></li>
+      </ul>
     </div>
+  </nav>
+
+  <div class="color-container">
     <div class="top-container container">
       <h1>Bhargava Kumar</h1>
       <h4><b>Senior Software Development Engineer in Test</b></h4>
@@ -856,6 +865,9 @@
   </div>
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
   <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 <footer>
 </footer>
