Added Azure devops

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           <li>
             <span class="skills-title">TestCafe</span>
             <span class="skills-score">
-              <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+              <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
             </span>
           </li>
           <li>
@@ -521,6 +521,12 @@
             </span>
           </li>
           <li>
+            <span class="skills-title">Blaze Meter</span>
+            <span class="skills-score">
+              <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+            </span>
+          </li>
+          <li>
             <span class="skills-title">K6</span>
             <span class="skills-score">
               <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
@@ -566,6 +572,12 @@
           </li>
           <li>
             <span class="skills-title">GitLab</span>
+            <span class="skills-score">
+              <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+            </span>
+          </li>
+          <li>
+            <span class="skills-title">Azure DevOps</span>
             <span class="skills-score">
               <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
             </span>
@@ -642,6 +654,7 @@
               <span class="">&#9733; &#9733; &#9733; &#9734; &#9734;</span>
             </span>
           </li>
+          <h6>Penetration testing</h6>
           <h6>Knowledge on other tools</h6>
           <li>
             <span class="skills-title">ExpressJS</span>
@@ -731,7 +744,7 @@
         <div class="project row">
           <div class="col-md-4">
             <h4>StockX</h4>
-            <p>May 2020 to Till date</p>
+            <p>May 2020 to Feb 2023</p>
             <p>Domain: E-Commerce</p>
             <p>Full Time</p>
           </div>
